--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <a href="after2.html" class="nav-item nav-link">Ater 2stnd</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a> -->
                 </div>
-                <a href="" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
+                <a href="https://santhoshsandan.github.io/school/index.html" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
