--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
                     <a href="after2.html" class="nav-item nav-link">Ater 2stnd</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a> -->
                 </div>
-                <a href="https://santhoshsandan.github.io/school/index.html" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
+                <a href="" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
 
 
         <!-- Carousel Start -->
-        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('./img/WhatsApp\ Image\ 2024-04-10\ at\ 15.00.46_9a152986.jpg'); background-size: cover; background-position: center;">
+        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('./img/portrait-smiling-boy.jpg'); background-size: cover; background-position: center;">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4" style="font-size: 3.0rem;">Focus on</h1>
-                <h1 class="display-2 text-white animated slideInDown mb-4">Values from Early Childhood</h1>
-                <h1 class="display-2 text-white animated slideInDown mb-4" style="font-size: 3.0rem;">Builds a Great Life Ahead</h1>
+                <h1 class="display-2 text-black animated slideInDown mb-4" style="font-size: 3.0rem;">Focus on</h1>
+                <h1 class="display-2 text-black animated slideInDown mb-4">Values from Early Childhood</h1>
+                <h1 class="display-2 text-black animated slideInDown mb-4" style="font-size: 3.0rem;">Builds a Great Life Ahead</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
                         <!-- Your breadcrumb content goes here -->
@@ -159,11 +159,11 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <i class="fa fa-chalkboard-teacher fa-3x text-info"></i>
+                                <i class="fa fa-chalkboard-teacher fa-3x text-warning"></i>
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3 class="text-info mb-3">Smart Classes</h3>
+                                <h3 class="text-warning mb-3">Trained Teachers</h3>
                                 <p class="mb-0">VKK has a technology enabled presentation tool that brings magical worldwide dreamy presentations to amaze the little children.</p>
                             </div>
                         </div>
@@ -172,12 +172,12 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-success">
                                 <span class="bg-success"></span>
-                                <i class="fa fa-futbol fa-3x text-success"></i>
+                                <i style="color: magenta;" class="fa fa-chalkboard-teacher "></i>
                                 <span class="bg-success"></span>
                             </div>
                             <div class="facility-text bg-success">
-                                <h3 class="text-success mb-3">Playground</h3>
-                                <p class="mb-0">VKK has the best Playground includes gaming equipments and many more.</p>
+                                <h3 style="color: magenta;" class=" mb-3">Smart Class</h3>
+                                <p class="mb-0">VKK has a technology enabled presentation tool that brings magical worldwide dreamy presentations to amaze the little children</p>
                             </div>
                         </div>
                     </div>
@@ -185,12 +185,12 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-warning">
                                 <span class="bg-warning"></span>
-                                <i class="fa fa-home fa-3x text-warning"></i>
+                                <i class="fa fa-home fa-3x text-success"></i>
                                 <span class="bg-warning"></span>
                             </div>
                             <div class="facility-text bg-warning">
-                                <h3 class="text-warning mb-3">Healthy Canteen</h3>
-                                <p class="mb-0">VKK providing healthy canteen</p>
+                                <h3  class="text-success mb-3">Child Care</h3>
+                                <p class="mb-0">Vkk has very strong child care facilities with 24 hours security.</p>
                             </div>
                         </div>
                     </div>
@@ -198,18 +198,19 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <i class="fa fa-chalkboard-teacher fa-3x text-info"></i>
+                                <i class="fa fa-futbol fa-3x text-info"></i>
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3 class="text-info mb-3">Positive Learning</h3>
-                                <p class="mb-0">Best Teachers providing good Knowledge to the children</p>
+                                <h3  class="text-info mb-3">Play Ground</h3>
+                                <p class="mb-0">VKK has the best Playground includes gaming equipments and many more.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
         <!-- Facilities End -->
 
 
@@ -218,7 +219,7 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="mb-4">Learn More About Our Work And Our Cultural Activities</h1>
+                        <h1 class="mb-4">Your Children is Our Responsibility.</h1>
                         <p>Do you know that your child's personality is built well before the age of 6! So a preschool is a very important place where intelligence is awakened and mindset is formed.
                             Vidya Kishore Kendra, or VKK, is a pioneering preschool. We inculcate Indian values and train the young minds for the modern world using latest equipment.
                             A preschool plays a very crucial role. It prepares the child for 15+ years of education ahead. Focus will be learning skills. A child is better prepared for the challenges ahead, when given the right learning habits and response mechanisms from early on
@@ -289,7 +290,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <p style="font-size: 50px; font-weight: bold; color: #111;">Programs</p>
+                   <h1>Programs</h1>
                     <p style="font-size: 30px; font-weight: bold; color: #111;">Toddlers</p>
                     <p>For toddlers, 1½ to 3 years old The VKK Day Care usually extends from 8.30 am to 6.00 pm as a
                         full-day facility. A half-day option is available during 8.30 am to 12.30 pm - it includes a
@@ -307,7 +308,8 @@
                         and lessons. Classes are conducted for 5 days of the week. Students may be asked to attend
                         classes on Saturdays.</p>
                         <div class="col-sm-6">
-                            <a  style="margin-left: 220px;" class="btn btn-primary rounded-pill py-3 px-5" href="">Read More</a>
+                            <a style="margin-left: 250px; white-space: nowrap;" class="btn btn-primary rounded-pill" href="https://santhoshsandan.github.io/school/index.html">Read More</a>
+
                         </div>
                     <!-- <p style="font-size: 30px; font-weight: bold; color: #111;">Curriculum Program</p>
                     <p>VKK offers a kindergarten program that includes language development and number development. Our
