--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <!-- Carousel Start -->
         <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('./img/portrait-smiling-boy.jpg'); background-size: cover; background-position: center;">
             <div class="container py-5">
-                <h1 class="display-2 text-black animated slideInDown mb-4" style="font-size: 3.0rem;">Focus on</h1>
-                <h1 class="display-2 text-black animated slideInDown mb-4">Values from Early Childhood</h1>
-                <h1 class="display-2 text-black animated slideInDown mb-4" style="font-size: 3.0rem;">Builds a Great Life Ahead</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4" style="font-size: 3.0rem;">Focus on</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Values from Early Childhood</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4" style="font-size: 3.0rem;">Builds a Great Life Ahead</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
                         <!-- Your breadcrumb content goes here -->
@@ -135,6 +135,8 @@
                                         </div>
                                     </div>
                                 </form>
+                                <p></p>
+                                <p style="margin-left: 170px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
@@ -159,11 +161,11 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <i class="fa fa-chalkboard-teacher fa-3x text-warning"></i>
+                                <i style="color: rgb(151, 69, 120);" class="fa fa-chalkboard-teacher fa-3x "></i>
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3 class="text-warning mb-3">Trained Teachers</h3>
+                                <h3 style="color: rgb(151, 69, 120);" class=" mb-3">Trained Teachers</h3>
                                 <p class="mb-0">VKK has a technology enabled presentation tool that brings magical worldwide dreamy presentations to amaze the little children.</p>
                             </div>
                         </div>
@@ -172,11 +174,11 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-success">
                                 <span class="bg-success"></span>
-                                <i style="color: magenta;" class="fa fa-chalkboard-teacher "></i>
+                                <i style="color: rgb(132, 194, 37);" class="fa fa-chalkboard-teacher "></i>
                                 <span class="bg-success"></span>
                             </div>
                             <div class="facility-text bg-success">
-                                <h3 style="color: magenta;" class=" mb-3">Smart Class</h3>
+                                <h3 style="color: rgb(132, 194, 37);" class=" mb-3">Smart Class</h3>
                                 <p class="mb-0">VKK has a technology enabled presentation tool that brings magical worldwide dreamy presentations to amaze the little children</p>
                             </div>
                         </div>
@@ -185,11 +187,11 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-warning">
                                 <span class="bg-warning"></span>
-                                <i class="fa fa-home fa-3x text-success"></i>
+                                <i style="color: rgb(248, 195, 0);" class="fa fa-home fa-3x "></i>
                                 <span class="bg-warning"></span>
                             </div>
                             <div class="facility-text bg-warning">
-                                <h3  class="text-success mb-3">Child Care</h3>
+                                <h3 style="color:  rgb(248, 195, 0);" class=" mb-3">Child Care</h3>
                                 <p class="mb-0">Vkk has very strong child care facilities with 24 hours security.</p>
                             </div>
                         </div>
@@ -198,11 +200,11 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <i class="fa fa-futbol fa-3x text-info"></i>
+                                <i  style="color:  rgb(219, 33,76);" class="fa fa-futbol fa-3x "></i>
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3  class="text-info mb-3">Play Ground</h3>
+                                <h3  style="color:   rgb(219, 33,76);"  class=" mb-3">Play Ground</h3>
                                 <p class="mb-0">VKK has the best Playground includes gaming equipments and many more.</p>
                             </div>
                         </div>
@@ -219,7 +221,7 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="mb-4">Your Children is Our Responsibility.</h1>
+                        <h1 class="mb-4">Your Child is Our Responsibility.</h1>
                         <p>Do you know that your child's personality is built well before the age of 6! So a preschool is a very important place where intelligence is awakened and mindset is formed.
                             Vidya Kishore Kendra, or VKK, is a pioneering preschool. We inculcate Indian values and train the young minds for the modern world using latest equipment.
                             A preschool plays a very crucial role. It prepares the child for 15+ years of education ahead. Focus will be learning skills. A child is better prepared for the challenges ahead, when given the right learning habits and response mechanisms from early on
@@ -227,7 +229,7 @@
                         <!-- <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos, ipsum labore duo duo sit no sea diam. Et dolor et kasd ea. Eirmod diam at dolor est vero nonumy magna.</p> -->
                         <div class="row g-4 align-items-center">
                             <div class="col-sm-6">
-                                <a class="btn btn-primary rounded-pill py-3 px-5" href="">Read More</a>
+                                <a class="btn btn-primary rounded-pill py-3 px-5" href="https://santhoshsandan.github.io/school/about.html">Read More</a>
                             </div>
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center">
@@ -300,7 +302,8 @@
                 </div>
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
 
-                    <p style="font-size: 30px; font-weight: bold; color: #111;">Pre-Nursery, LKG & UKG (2½ to 5½ years
+                    <p style="font-size: 30px; font-weight: bold; color: #111;">Pre-Nursery, LKG & UKG </p>
+                    <p style="font-size: 20px; font-weight: bold; color: #111;">(2½ to 5½ years
                         olds)</p>
                     <p>The VKK school day is during 9.20 am - 12.30 pm for Pre-nursery For Pre-nursery - </p>
                     <p>- 9.20 am - 2.00 pm for LKG, including a daily short break and lunch period.</p>
@@ -308,7 +311,7 @@
                         and lessons. Classes are conducted for 5 days of the week. Students may be asked to attend
                         classes on Saturdays.</p>
                         <div class="col-sm-6">
-                            <a style="margin-left: 250px; white-space: nowrap;" class="btn btn-primary rounded-pill" href="https://santhoshsandan.github.io/school/index.html">Read More</a>
+                            <a style="margin-left: 250px; white-space: nowrap;" class="btn btn-primary rounded-pill" href="https://santhoshsandan.github.io/school/classes.html">Read More</a>
 
                         </div>
                     <!-- <p style="font-size: 30px; font-weight: bold; color: #111;">Curriculum Program</p>
@@ -568,7 +571,63 @@
             </div>
         </div>
         <!-- Classes End -->
-
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="bg-light rounded">
+                    <div class="row g-0">
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                            <div class="h-100 d-flex flex-column justify-content-center p-5">
+                                <h1 class="mb-4">Make Appointment</h1>
+                                <form>
+                                    <div class="row g-3">
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
+                                                <label for="gname">Guardian Name</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
+                                                <label for="gmail">Guardian Email</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
+                                                <label for="cname">Child Name</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
+                                                <label for="cage">Child Age</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="form-floating">
+                                                <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                                <label for="message">Message</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                                        </div>
+                                    </div>
+                                </form>
+                                <p></p>
+                                <p style="margin-left: 170px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
+                            <div class="position-relative h-100">
+                                <img class="position-absolute w-100 h-100 rounded" src="img/appointment.jpg" style="object-fit: cover;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Appointment Start -->
        
