--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
         <!-- Carousel Start -->
-        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('./img/portrait-smiling-boy.jpg'); background-size: cover; background-position: center;">
+        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('./img/portrait-smiling-boy - .jpg'); background-size: cover; background-position: center;">
             <div class="container py-5">
                 <h1 class="display-2 text-white animated slideInDown mb-4" style="font-size: 3.0rem;">Focus on</h1>
                 <h1 class="display-2 text-white animated slideInDown mb-4">Values from Early Childhood</h1>
