--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
         <!-- Carousel Start -->
-        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('./img/portrait-smiling-boy - .jpg'); background-size: cover; background-position: center;">
+        <div class="container-xxl py-5 page-header position-relative mb-5" style="background-image: url('./img/portrait-smiling-boy.jpg'); background-size: cover; background-position: center;">
             <div class="container py-5">
                 <h1 class="display-2 text-white animated slideInDown mb-4" style="font-size: 3.0rem;">Focus on</h1>
                 <h1 class="display-2 text-white animated slideInDown mb-4">Values from Early Childhood</h1>
@@ -136,7 +136,7 @@
                                     </div>
                                 </form>
                                 <p></p>
-                                <p style="margin-left: 170px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
+                                <p style="margin-left: 140px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
@@ -616,7 +616,7 @@
                                     </div>
                                 </form>
                                 <p></p>
-                                <p style="margin-left: 170px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
+                                <p style="margin-left: 140px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
