--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <a href="after2.html" class="nav-item nav-link">Ater 2stnd</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a> -->
                 </div>
-                <a href="" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
+                <a href="https://santhoshsandan.github.io/school/contact.html" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
@@ -157,14 +157,14 @@
                     <p></p>
                 </div>
                 <div class="row g-4">
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="facility-item">
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s"  >
+                        <div class="facility-item" >
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <i style="color: rgb(151, 69, 120);" class="fa fa-chalkboard-teacher fa-3x "></i>
-                                <span class="bg-info"></span>
+                                <i style="color: rgb(150, 74, 118);" class="fa fa-chalkboard-teacher fa-3x "></i>
+                                <span class="bg-info" ></span>
                             </div>
-                            <div class="facility-text bg-info">
+                            <div class="facility-text bg-info" >
                                 <h3 style="color: rgb(151, 69, 120);" class=" mb-3">Trained Teachers</h3>
                                 <p class="mb-0">VKK has a technology enabled presentation tool that brings magical worldwide dreamy presentations to amaze the little children.</p>
                             </div>
