--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
                                                 <label for="cage">Child Age</label>
                                             </div>
                                         </div>
+					    <div class="col-12">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" name="phone" id="phone" placeholder="Phone">
+                                                <label for="phone">Phone</label>
+                                            </div>
+                                        </div>
                                         <div class="col-12">
                                             <div class="form-floating">
                                                 <textarea class="form-control border-0" name="message" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
@@ -604,6 +610,12 @@
                                             <div class="form-floating">
                                                 <input type="text" class="form-control border-0"  name="child age" id="cage" placeholder="Child Age">
                                                 <label for="cage">Child Age</label>
+                                            </div>
+                                        </div>
+					    <div class="col-12">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" name="phone" id="phone" placeholder="Phone">
+                                                <label for="phone">Phone</label>
                                             </div>
                                         </div>
                                         <div class="col-12">
