--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                     </div>
                                 </form>
                                 <p></p>
-                                <p style="margin-left: 140px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
+                                <p style="margin-left: 140px;" class="mb-4">or Call Us at <a href="918041685124">+918041685124</a>.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
@@ -683,7 +683,7 @@
                                     </div>
                                 </form>
                                 <p></p>
-                                <p style="margin-left: 140px;" class="mb-4">or Call Us at <a href="080-4168 5124">080-4168 5124</a>.</p>
+                                <p style="margin-left: 140px;" class="mb-4">or Call Us at <a href="918041685124">+918041685124 or +916366732999</a>.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
@@ -719,7 +719,7 @@
             src="https://www.chatbase.co/chatbot-iframe/bsLdEET_VWNgpYYCTG5gZ"
             title="Chatbot"
           
-            style="height:50%; min-height: 300px"
+            style="height:50%; min-height: 350px"
             frameborder="0"
             ></iframe>
             
@@ -733,8 +733,8 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Get In Touch</h3>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>No. 105, 208, SFS, New Town Yelahanka, Bangalore 560 064 </p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>080-4168 5124   </p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>No.173/174, 208, SFS, New Town Yelahanka, Bangalore 560 064 </p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+918041685124 or +916366732999</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>www.mec.edu.in</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
