--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
        
         <!-- Testimonial End -->
  <!-- Chat Popup -->
-       <div id="chat-popup" class="chat-popup">
+<!--        <div id="chat-popup" class="chat-popup">
             <div class="chat-popup-header">
                 <span class="chat-popup-title">Chat with Us</span>
                 <button class="chat-popup-close" onclick="closeChatPopup()">×</button>
@@ -723,7 +723,7 @@
             frameborder="0"
             ></iframe>
             
-        </div>
+        </div> -->
 
         <!-- Chat Popup End -->
 
